fix overflow
overflow is not hidden in service section

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -160,6 +160,9 @@
 
 
 /******** begin services ********/
+.services {
+    overflow: hidden;
+}
 .services .heading{
     width: 60%;
     margin: unset;
